# Onip-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/design/: basic_graphics_design.drawio
docs/design_images/: basic_graphics_design.drawio.html
engine/: CMakeLists.txt  main.cpp
engine/assets/shaders/: default_sprite.frag  default_sprite.vert
engine/include/onip/: config.hpp
engine/include/onip/components/: camera.hpp  graphics_comps.hpp  sprite_and_mesh.hpp  transform.hpp
engine/include/onip/core/: application.hpp  application_layer.hpp  component_manager.hpp  debug.hpp  entity_manager.hpp  input.hpp  scene_manager.hpp
engine/include/onip/graphics/: gl_batch_renderer.hpp  gl_pipeline.hpp  panel_handler.hpp  window.hpp
engine/include/onip/systems/: camera_handler.hpp  vertex_extraction.hpp
engine/include/onip/utils/: pool.hpp  utils.hpp
engine/src/core/: application.cpp  debug.cpp  entity_manager.cpp  input.cpp  scene_manager.cpp
engine/src/graphics/: gl_batch_renderer.cpp  gl_pipeline.cpp  panel_handler.cpp  window.cpp
engine/src/systems/: camera_handler.cpp  vertex_extraction.cpp
engine/src/utils/: pool.cpp  utils.cpp
project/: CMakeLists.txt
project/Code/include/core/: editor.hpp  panel_handler.hpp
project/Code/include/panels/: assets.hpp  console.hpp  docking_space.hpp  hierarchy.hpp  inspector.hpp  viewport.hpp
project/Code/src/core/: config.cpp  editor.cpp  panel_handler.cpp
project/Code/src/panels/: assets.cpp  console.cpp  docking_space.cpp  hierarchy.cpp  inspector.cpp  viewport.cpp
